--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1 {
     width: 320px;
     height: 500px;
     background-color: hsl(0, 0%, 100%);
-    margin: 150px auto;
+    margin: 150px auto 55px;
     border-radius: 15px;
     box-shadow: 4px 10px 99px 8px rgba(0, 0, 0, 0.1);
   }
